Changed a few answers

--- a/Maze.ipynb
+++ b/Maze.ipynb
@@ -662,7 +662,7 @@
         "    maze_str = f.read()\n",
         "maze = mh.parse_maze(maze_str)\n",
         "answer = DepthFirstSearch(maze,30,True)\n",
-        "print(answer)"
+        "# print(answer)"
       ]
     },
     {
@@ -683,7 +683,7 @@
         "# Discussion\n",
         "BFS deals with loops by keeping track of all explored nodes in a set, which prevents it from relooking at nodes.\n",
         "\n",
-        "DFS with the way I implemented cycle checking will recheck for every searched node if that node is in the path to the node. This is run for every node, but it does mean that there is less memory used because it gets rid of nodes after searching. It does mean that it has a longer run time."
+        "DFS with the way I implemented cycle checking will recheck for every searched node if that node is in the path to the node. This is run for every node, but it does mean that there is less memory used because it gets rid of nodes after searching. It also checks if the next node is already in the frontier, and if so it will remove it from the frontier and add it to the end. It does mean that it has a longer run time."
       ]
     },
     {
@@ -1024,9 +1024,9 @@
         "# Discussion GreedyBFS(maze, True)\n",
         "\n",
         "\n",
-        "The A* search is both optimal and complete (as long as the heuristic is admissable, which in my case it is becuase I give a lower bound for steps with it equal to steps travelled + min steps to go) The time complexity is O(b^d) where b is the branching factor and d is the depth of the solution. However, it normally has a lower branching factor than other implementations becuase the heuristic leads to lead it in a certain direction rather than actually testing all 4. The space complexity is O(b^d) also, since every visited node is kept in memory for visited checking.\n",
+        "The A* search is both optimal and complete (as long as the heuristic is admissible, which in my case it is becuase I give a lower bound for steps with it equal to steps travelled + min steps to go) The time complexity is O(b^d) where b is the branching factor and d is the depth of the solution. However, it normally has a lower branching factor than other implementations becuase the heuristic leads to lead it in a certain direction rather than actually testing all 4. The space complexity is O(b^d) also, since every visited node is kept in memory for visited checking.\n",
         "\n",
-        "The greedyBFS is not optimal, but it is complete.\n"
+        "The greedyBFS is not optimal, but it is complete. This is because the heruistic it uses is not admissible, but it will end up checking every state and in some situations leads to a good result.\n"
       ]
     },
     {
@@ -2083,6 +2083,8 @@
         "Another lesson I have learned is that the way you choose your heuristic is very important. For example, I at first had ties (where the heuristic is equal) simply random by the order they came in. However, this led to less than ideal searching, and so I added in that if the h(n) is tied to choose the shortest path for greedy seach since otherwise greedy would typically choose the longer path, although this leads to greedy searching a much larger state space. However, with A*, I chose to prioritize the larger cost since A* keeps track of the cost in the heuristic already, which made it much more effiecient.\n",
         "\n",
         "Another lesson I learned is that you have to check if a node is already in the frontier, and decide what happens if so. In the case of DFS, I originally just didn't add the new node, but this leads to it taking forever. So I ended up removing the node from the frontier and adding the new node.\n",
+        "\n",
+        "Another thing I learned is that when you check the order in a random way, DFS ends up choosing a very random path in open environments. If I had put it to a specific order, it would have looked much more ordered.\n",
         "\n"
       ]
     },
